cilium-networkpolicies/cilium-namespace-isolation.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: cilium-namespace-isolation
  namespace: cilium
spec:
  endpointSelector:
    matchLabels: {}
  ingress:
  - fromEndpoints:
    - matchLabels: {}
  egress:
  - toEndpoints:
    - matchLabels: {}
  - toEndpoints:
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: kube-system
        k8s:k8s-app: kube-dns
    toPorts:
    - ports:
      - port: "53"
        protocol: UDP
  # - toEntities:
  #   - host  # Allow to host (includes API server)
  #   toPorts:
  #   - ports:
  #     - port: "6443"
  #       protocol: TCP
