cilium-networkpolicies/kasten-check-licence.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: kasten-check-licence
  namespace: kasten-io
spec:
  endpointSelector:
    matchLabels:
      component: dashboardbff
  ingress:
    - fromEndpoints:
        - matchLabels: {}
  egress:
    - toFQDNs:
        - matchName: gcr.io
        - matchName: oauth2.googleapis.com
      toPorts:
        - ports:
            - port: "443"
