cilium-networkpolicies/kubedns-egress-53.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: kubedns-egress-53
  namespace: kube-system
spec:
  endpointSelector:
    matchLabels:
      io.kubernetes.pod.namespace: kube-system
      k8s-app: kube-dns
  ingress:
    - fromEndpoints:
        - matchLabels: {}
  egress:
    - toEndpoints:
        - matchLabels: {}
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
