cilium-networkpolicies/longhorn-upgrade-check.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: kasten-check-licence
  namespace: kasten-io
spec:
  endpointSelector:
    matchLabels:
      app: longhorn-manager
  ingress:
    - fromEndpoints:
        - matchLabels: {}
  egress:
    - toFQDNs:
        - matchName: gcr.io
      toPorts:
        - ports:
            - port: "443"
