cilium-networkpolicies/namespace-isolation-kubesystem.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: namespace-isolation-kubesystem
  namespace: kube-system
spec:
  endpointSelector:
    matchLabels: {}
  ingress:
  - fromEndpoints:
    - matchLabels: {}
  - fromEntities:
    - cluster  # Allows ingress from all endpoints in the cluster
    toPorts:
    - ports:
      - port: "53"
        protocol: UDP  # Standard DNS port
  egress:
  - toEndpoints:
    - matchLabels: {}
  - toEntities:
    - host  # Allow to host (includes API server)
    toPorts:
    - ports:
      - port: "6443"
        protocol: TCP
      - port: "10250"
        protocol: TCP
      - port: "4244"
        protocol: TCP
