cilium-networkpolicies/namespace-isolation-tailscale.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: namespace-isolation-tailscale
  namespace: tailscale
spec:
  endpointSelector:
    matchLabels: {}
  ingress:
  - fromEndpoints:
    - matchLabels: {}
  egress:
  - toEndpoints:
    - matchLabels: {}
  # - toEndpoints:
  #   - matchLabels:
  #       k8s:io.kubernetes.pod.namespace: kube-system
  #       k8s:k8s-app: kube-dns
  #   toPorts:
  #   - ports:
  #     - port: "53"
  #       protocol: UDP
