cilium-networkpolicies/netpol-podcleaner.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: netpol-podcleaner
  namespace: cleaners
spec:
  endpointSelector:
    matchLabels: {}
  ingress:
  - fromEndpoints:
    - matchLabels: {}
  egress:
  - toEndpoints:
    - matchLabels: {}
  - toEntities:
    - host  # Allow to host (includes API server)
    toPorts:
    - ports:
      - port: "6443"
        protocol: TCP
