cilium-networkpolicies/tailscale-operator-to-api-server.yaml
# allows provisioning helper pods/services
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: tailscale-operator-to-api-server
  namespace: tailscale
spec:
  endpointSelector:
    matchLabels:
      app: operator
  egress:
  - toEntities:
    - host  # Allow to host (includes API server)
    toPorts:
    - ports:
      - port: "6443"
        protocol: TCP
