cilium-networkpolicies/ui-ingress-argocd.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: ui-ingress-argocd
  namespace: argocd
spec:
  endpointSelector:
    matchLabels: 
      app.kubernetes.io/name: argocd
  ingress:
  - fromEndpoints:
    - matchLabels: {}
  - fromEndpoints:
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: traefik
        app.kubernetes.io/name: traefik
    toPorts:
    - ports:
      - port: "8080"
        protocol: TCP
  egress:
  - toEndpoints:
    - matchLabels: {}
